# mdserve

./: .npmignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  install.sh  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
coverage/: tarpaulin-report.html  tarpaulin-report.json
docs/: architecture.md
frontend/: index.html  lcov.info  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vitest.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/src/: App.css.html  App.tsx.html  CodeBlockEnhancements.css.html  index.html
frontend/e2e/: core-functionality.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.css  App.test.tsx  App.tsx  App.tsx.bak  App.tsx.bak2  CodeBlockEnhancements.css  index.css
frontend/src/components/: CodeBlock.css  CodeBlock.tsx  FileTree.css  FileTree.tsx  MarkdownContent.test.tsx  MarkdownContent.tsx  MermaidDiagram.css  MermaidDiagram.tsx  SidebarResizeHandle.css  SidebarToggle.css  (+7 more)
scripts/: postinstall.js
src/: app.rs  lib.rs  main.rs
templates/: main.html
test_folders/: README.md  TESTING-SUMMARY.md  code-examples.md  custom.css  images-and-media.md  markdown-features.md  mermaid-diagrams.md  nested-test.md  test3.md  test4.md
test_folders/api/: api-overview.md
test_folders/debug-sections/: 01-task-lists.md  02-formatting-links.md  03-lists.md  04-blockquotes.md  05-inline-html.md  06-tables.md  07-combined.md
test_folders/docs/: first-steps.md
tests/: integration_test.rs
(+56 files in other folders)
