[package]
name = "docserve"
version = "0.1.0"
authors = ["Stefano Benatti <stefano@heavenstudio.com.br>"]
edition = "2021"
rust-version = "1.82.0"
license = "MIT"
description = "Fast markdown documentation server with React SPA frontend, recursive folder support, and live reload"
repository = "https://github.com/teonimesic/docserve"
homepage = "https://github.com/teonimesic/docserve"
documentation = "https://github.com/teonimesic/docserve#readme"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "fs", "time"] }
clap = { version = "4.5.45", features = ["derive"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
notify = "8.2.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
md5 = "0.7"
rust-embed = { version = "8.9.0", features = ["axum"] }
mime_guess = "2.0.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
axum-test = { version = "16.0", features = ["ws"] }
tempfile = "3.0"
tokio-test = "0.4"
